fix: :bug: refactorización de tsconfig
